# dictate

./: AGENTS.md  CLAUDE.md  README.md  package-lock.json
medical-dictation-backend/libs/asr_models/: pyproject.toml
medical-dictation-backend/libs/asr_models/src/asr_models/: __init__.py  job.py  output.py
medical-dictation-backend/libs/audit/: pyproject.toml
medical-dictation-backend/libs/audit/src/audit/: __init__.py  canonical.py  exceptions.py  types.py  verifier.py  writer.py
medical-dictation-backend/libs/audit/tests/integration/: test_verifier.py  test_writer.py
medical-dictation-backend/libs/audit/tests/unit/: test_canonical.py  test_writer_target_id.py
medical-dictation-backend/libs/auth/: pyproject.toml
medical-dictation-backend/libs/auth/src/auth/: __init__.py  claims.py  context.py  dependencies.py  exceptions.py  jwks.py  perms.py  verifier.py
medical-dictation-backend/libs/auth/tests/: conftest.py
medical-dictation-backend/libs/auth/tests/integration/: test_keycloak.py
medical-dictation-backend/libs/auth/tests/unit/: test_claims.py  test_dependencies.py  test_jwks.py  test_perms.py  test_verifier.py
medical-dictation-backend/libs/crypto/: pyproject.toml
medical-dictation-backend/libs/crypto/src/crypto/: __init__.py  envelope.py  exceptions.py  master.py  stream.py  tenant_kek.py
medical-dictation-backend/libs/crypto/tests/unit/: conftest.py  test_envelope.py  test_master_key_chaos.py  test_master_key_provider.py
medical-dictation-backend/libs/db/: README.md  pyproject.toml
medical-dictation-backend/libs/db/src/db/: __init__.py  engine.py  pool.py  tenant.py
medical-dictation-backend/libs/db/tests/integration/: test_rls_isolation.py  test_rls_isolation_asr.py  test_rls_isolation_memberships.py  test_tenant_isolation.py
medical-dictation-backend/libs/db/tests/unit/: test_tenant_validation.py
medical-dictation-backend/libs/demo/: pyproject.toml
medical-dictation-backend/libs/demo/src/demo/: __init__.py  audit_kinds.py  rate_limit.py
medical-dictation-backend/libs/demo/tests/: conftest.py
medical-dictation-backend/libs/demo/tests/unit/: test_rate_limit.py
medical-dictation-backend/libs/kep/: pyproject.toml
medical-dictation-backend/libs/kep/src/medical_kep/: __init__.py  canonicalize.py  diia_provider.py  envelope.py  health.py  iit_provider.py  mock_provider.py  pdf_renderer.py  provider.py  selection.py  trust_store.py  verify.py
medical-dictation-backend/libs/kep/tests/: conftest.py
medical-dictation-backend/libs/kep/tests/unit/: test_canonicalize.py  test_mock_provider.py  test_selection.py  test_verify.py
medical-dictation-backend/libs/messaging/: pyproject.toml
medical-dictation-backend/libs/messaging/src/messaging/: __init__.py  protocols.py  redis_streams.py
medical-dictation-backend/libs/messaging/tests/: test_protocols.py
medical-dictation-backend/libs/messaging/tests/integration/: test_redis_streams.py
medical-dictation-backend/libs/observability/: pyproject.toml
medical-dictation-backend/libs/observability/src/observability/: __init__.py  bootstrap.py  correlation.py  logging.py  metrics.py  pii_filter.py  problem_details.py  tracing.py
medical-dictation-backend/libs/observability/tests/unit/: test_pii_filter.py
medical-dictation-backend/libs/report_models/: pyproject.toml
medical-dictation-backend/libs/report_models/src/report_models/: __init__.py  content.py  diff.py  read_purpose.py
medical-dictation-backend/libs/report_models/tests/: conftest.py
medical-dictation-backend/libs/report_models/tests/unit/: test_content.py
medical-dictation-backend/libs/secret/: README.md  pyproject.toml
medical-dictation-backend/libs/secret/src/secret/: __init__.py  secret.py
medical-dictation-backend/libs/secret/tests/: test_secret.py
medical-dictation-backend/libs/storage/: pyproject.toml
medical-dictation-backend/libs/storage/src/storage/: __init__.py  object_store.py  s3_client.py
medical-dictation-backend/libs/storage/tests/unit/: test_object_store.py
medical-dictation-backend/libs/template_models/: pyproject.toml
medical-dictation-backend/libs/template_models/src/template_models/: __init__.py  schema.py
medical-dictation-backend/libs/template_models/tests/unit/: test_schema.py
medical-dictation-backend/services/_template/: .env.example  Dockerfile  pyproject.toml
medical-dictation-backend/services/_template/src/template_service/: __init__.py  config.py  main.py  main_deps.py  middleware.py
medical-dictation-backend/services/_template/tests/: conftest.py  test_health.py
medical-dictation-backend/services/asr-worker/: .env.example  Dockerfile  Dockerfile.cpu  pyproject.toml
medical-dictation-backend/services/asr-worker/src/asr_worker/: __init__.py  audio_io.py  audit_kinds.py  config.py  inference.py  main.py  main_deps.py  processor.py  vad.py
medical-dictation-backend/services/auth-service/: Dockerfile  pyproject.toml
medical-dictation-backend/services/auth-service/src/auth_service/: audit_kinds.py  config.py  deps.py  jwks_metrics.py  keycloak_client.py  main.py  main_deps.py  tenants_repository.py
medical-dictation-backend/services/auth-service/tests/integration/: test_auth_endpoints.py
medical-dictation-backend/services/auth-service/tests/unit/: test_jwks_metrics.py  test_tenants.py
medical-dictation-backend/services/autocomplete-service/: Dockerfile  pyproject.toml
medical-dictation-backend/services/autocomplete-service/src/autocomplete_service/: __init__.py  main.py  (+9 more)
medical-dictation-backend/services/autocomplete-service/tests/: conftest.py
medical-dictation-backend/services/dictation-service/: .env.example  Dockerfile  Dockerfile.cpu  pyproject.toml
medical-dictation-backend/services/nlp-service/: .env.example  Dockerfile  pyproject.toml
medical-dictation-backend/services/report-service/: .env.example  Dockerfile  pyproject.toml
medical-dictation-backend/services/report-service/tests/: conftest.py
medical-dictation-backend/services/signing-service/: Dockerfile  pyproject.toml
medical-dictation-backend/services/signing-service/tests/: conftest.py
(+573 files in other folders)
