[project]
name = "asr_models"
version = "0.3.0"
description = "Shared Pydantic models for ASR job + transcription output (sprint 03)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr_models"]
