[project]
name = "audit"
version = "0.2.0"
description = "Tamper-evident hash-chained audit log writer + JCS canonicalizer"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "rfc8785>=0.1.4",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.12"
