[project]
name = "crypto"
version = "0.3.0"
description = "Envelope encryption (KEK_master → KEK_tenant → DEK_object) and master-key providers. Sprint 03."
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0",
    "asyncpg>=0.29.0",
    "secret",
]

[tool.uv.sources]
secret = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
