[project]
name = "demo"
version = "0.1.0"
description = "Sprint-07 HF-Space demo helpers (rate limit, audit kinds)"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.23",
]
