[project]
name = "medical_kep"
version = "0.1.0"
description = "Sprint-09 KEP signing — provider abstraction, canonicalisation, PDF, verify"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "rfc8785>=0.1.4",
    "cryptography>=42.0",
    "asn1crypto>=1.5",
    "httpx>=0.27",
    "defusedxml>=0.7",
    "pypdf>=4.2",
    "audit",
]

[tool.uv.sources]
audit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_kep"]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62.0",
    "Jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.103",
]
