[project]
name = "messaging"
version = "0.3.0"
description = "Producer / consumer Protocol abstractions + Redis Streams concrete impl (S3); Kafka concrete impl lands in S14."
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/messaging"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
