[project]
name = "observability"
version = "0.1.0"
description = "Shared observability utilities: structured logging, OTel tracing/metrics, PII-safe filter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-asyncpg>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
