[project]
name = "report_models"
version = "0.1.0"
description = "Sprint-08 report content + version Pydantic models"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/report_models"]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6.103",
]
