[project]
name = "secret"
version = "0.1.0"
description = "Typed Secret[T] wrapper that refuses to leak via repr/str/format/JSON/pickle"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secret"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.12"
