[project]
name = "storage"
version = "0.3.0"
description = "Object-store adapter that wraps every PHI byte with libs/crypto's envelope. Sprint 03."
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=12.4.0",
    "crypto",
]

[tool.uv.sources]
crypto = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
