[project]
name = "auth-service"
version = "0.2.0"
description = "Identity, tenant CRUD, audit read/verify API. Day 5+ of sprint 02."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "python-json-logger>=2.0.7",
    # Internal libs (resolved via uv workspace)
    "observability",
    "auth",
    "audit",
    "db",
]

[tool.uv.sources]
observability = { workspace = true }
auth = { workspace = true }
audit = { workspace = true }
db = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.12"
