[project]
name = "autocomplete-service"
version = "0.10.0"
description = "Sprint-10 autocomplete + snippet expansion service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "redis>=5.0",
    "marisa-trie>=1.1.0",
    "rapidfuzz>=3.6",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "python-json-logger>=2.0.7",
    "observability",
    "auth",
    "audit",
    "db",
    "secret",
]

[tool.uv.sources]
observability = { workspace = true }
auth = { workspace = true }
audit = { workspace = true }
db = { workspace = true }
secret = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fakeredis>=2.23",
    "hypothesis>=6.103",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autocomplete_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
