[project]
name = "dictation-service"
version = "0.4.0"
description = "Sprint-04 streaming ASR. WebSocket protocol medical-dictation.v1 with reconnect, retransmit, voice-command slot."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "redis>=5.0.4",
    "numpy>=1.26.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "python-json-logger>=2.0.7",
    # opuslib needs libopus on the host; the GPU worker image ships libopus0.
    # Optional at install time so the unit tests can run on macOS / dev hosts
    # without it installed — codec is imported lazily.
    "opuslib>=3.0.1 ; platform_system != 'Darwin'",
    # Internal libs
    "observability",
    "auth",
    "audit",
    "db",
    "messaging",
    "crypto",
    "storage",
    "asr_models",
    "secret",
    # asr-worker is in the same image; we import WhisperEngine directly.
    "asr-worker",
]

[tool.uv.sources]
observability = { workspace = true }
auth = { workspace = true }
audit = { workspace = true }
db = { workspace = true }
messaging = { workspace = true }
crypto = { workspace = true }
storage = { workspace = true }
asr_models = { workspace = true }
secret = { workspace = true }
asr-worker = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictation_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.12"
